# FreenectSDK

./: .gitignore  CMakeLists.txt  README
FreenectDriver/: CMakeLists.txt  ColorStream.cpp  ColorStream.hpp  DepthStream.cpp  DepthStream.hpp  DeviceDriver.cpp  Properties.h  VideoStream.hpp  libfreenect.hpp
NiTE2/: CMakeLists.txt
OpenNI2/: CMakeLists.txt
libfreenect/: CMakeLists.txt
libfreenect/examples/: CMakeLists.txt  glpclview.c  tiltdemo.c
libfreenect/fakenect/: CMakeLists.txt  README  fakenect.sh
libfreenect/src/: CMakeLists.txt
libusb/: CMakeLists.txt  config.h
libusb/os/: darwin_usb.c
tools/: import_nite2.sh  import_openni2.sh
